# plume

./: .env.example  .gitignore  CLAUDE.md  README.md  UI_AUDIT.md  installer.iss  plume.spec  pyproject.toml
.github/workflows/: build-windows-sigma.yml  build-windows.yml
plume/: __main__.py  app.py  capture.py  clipboard.py  config.py  fixer.py  gui_entry.py  hotkey.py  notifier.py  prompts.py  replace.py  settings.py  sigma_secrets.env.example  theme.py  tray.py  ui.py  widget.py  wizard.py
tests/: test_clipboard.py  test_config.py  test_fixer.py  test_notifier.py  test_prompts.py
