[project]
name = "plume"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pyperclip",
    "pynput",
    "platformdirs",
    "pydantic>=2",
    "python-dotenv",
    "tomli-w",
    "pystray>=0.19.5",
    "pillow>=12.2.0",
    "plyer>=2.1.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
gui = ["PyQt6"]

[project.scripts]
plume = "plume.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "types-pyperclip>=1.11.0.20260508",
    "types-pynput>=1.8.1.20260518",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"plume/prompts.py" = ["E501"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "pystray"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["Xlib", "Xlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plyer"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
